--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-/* variables declared here - these are the colors for our pages, as well as the font stacks and sizes. */
 :root {
     --black: #171321;
     --Bossa:#4A3C4D;
@@ -13,7 +12,7 @@
   
   
 }
-/* border box model: https://css-tricks.com/box-sizing/ */
+
 html {
     box-sizing: border-box;
 }
@@ -45,7 +44,7 @@ a:hover{
 img {
   width: 100%;
 }
-/*background colors*/
+
 .section-two{
   background-color: var(--Divine);
 }
@@ -61,7 +60,7 @@ img {
 
 
 
-/* intro styles*/
+
 
 #intro {
   padding: 4rem 1rem 10rem 1rem;
@@ -72,6 +71,7 @@ img {
 #intro p{
   font-size: 1rem;
   line-height: 1.5;
+  text-align: justify;
   
 }
 
@@ -174,7 +174,7 @@ nav [class*="fa-"]:hover{
   background-color: var(--Zinnwaldite);
 }
 
-/*projects section*/
+
 
 #projects {
   padding: 4rem 1rem;
